--- a/django/Webtoon/webtoon/templates/webtoon/detail.html
+++ b/django/Webtoon/webtoon/templates/webtoon/detail.html
@@ -1,21 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-<h1>Hello, this is webtoon detail page</h1>
-<h1>{{ webtoon.webtoon_name }}</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<h2><a href="{% url 'webtoon:detail' webtoon.id %}">{{ webtoon.webtoon_name }}</a></h2>
+    <h4>{{ webtoon.author }} | {{ webtoon.description }} </h4>
     <ul>
         {% for episode in episode_list %}
+
         <li>
             {{ episode }}
         </li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
