--- a/django/Webtoon/webtoon/templates/webtoon/index.html
+++ b/django/Webtoon/webtoon/templates/webtoon/index.html
@@ -1,14 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-<h1>Hello, this is webtoon index page</h1>
+{% extends 'base.html' %}
+{% block content %}
+
 {% if webtoon_list %}
     <ul>
         {% for webtoon in webtoon_list %}
@@ -22,6 +14,4 @@
 {% else %}
     <p>No Webtoona are available.</p>
 {% endif %}
-
-</body>
-</html>
+{% endblock %}
